--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <title>Hello, world!</title>
 </head>
 
-<body class="">
+<body class="overflow-hidden">
 
-  <div class="sticky-top overflow-hidden">
+  <div class="sticky-top ">
     <nav class="navbar navbar-expand-lg px-3 ">
       <div class="container-xxl">
         <a class="navbar-brand w-25" href="#"><img class="w-25" src="./img/logo.png" alt=""></a>
@@ -44,7 +44,7 @@
                 aria-expanded="false">
                 About Us
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu uca" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Services</a></li>
                 <li><a class="dropdown-item" href="#">Services Details</a></li>
               </ul>
