--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <title>Hello, world!</title>
 </head>
 
-<body class="overflow-hidden">
+<body class="">
 
   <div class="sticky-top ">
     <nav class="navbar navbar-expand-lg px-3 ">
